tests/ui/fail/skip/duplicate_specifier.stderr
error: encountered duplicate `#[skip(getters)]`
 --> tests/ui/fail/skip/duplicate_specifier.rs:5:21
  |
5 |     #[skip(getters, getters)]
  |                     ^^^^^^^

error: duplicate `#[skip(getters)]` here
 --> tests/ui/fail/skip/duplicate_specifier.rs:5:12
  |
5 |     #[skip(getters, getters)]
  |            ^^^^^^^
